# perception-modules

Automonous /aruco_tracking/: package.xml
Automonous /zed_obstacle_detector/: QUICK_REFERENCE.md
Automonous perception/sample_detection/: detect_pose_zed.py
Robotic-Arm/: .gitignore  README.md
aruco_tracking/: CMakeLists.txt  setup.py
aruco_tracking/src/aruco_tracking/: __init__.py  aruco_tracking.py
docs/: Doxyfile
docs/html/: Automonous_01perception_2uv__detector__node_2src_2README_8md.html  QUICK__REFERENCE_8md.html  README_8md.html  README__Docker_8md.html  REAL__WORLD__DEPLOYMENT_8md.html  UV__detector_8cpp.html  UV__detector_8cpp__incl.map  UV__detector_8cpp__incl.md5  UV__detector_8h.html  UV__detector_8h__dep__incl.map  UV__detector_8h__dep__incl.md5  UV__detector_8h__incl.map  UV__detector_8h__incl.md5  UV__detector_8h_source.html  ____init_____8py.html  annotated.html  aruco__tracking_8py.html  classUVbox-members.html  classUVbox.html  classUVdetector-members.html  classUVdetector.html  classUVdetector__coll__graph.map  classUVdetector__coll__graph.md5  classUVtracker-members.html  classUVtracker.html  classaruco__tracking_1_1aruco__tracking_1_1ArucoTracker-members.html  classaruco__tracking_1_1aruco__tracking_1_1ArucoTracker.html  classes.html  classkalman__filter-members.html  classkalman__filter.html  classmy__detector-members.html  classmy__detector.html  classnode_1_1ArucoTrackingNode-members.html  classnode_1_1ArucoTrackingNode.html  classparam__checker_1_1ParameterChecker-members.html  classparam__checker_1_1ParameterChecker.html  classzed__obstacle__detector_1_1ClusterDetector-members.html  classzed__obstacle__detector_1_1ClusterDetector.html  classzed__obstacle__detector_1_1CoordinateTransformer-members.html  classzed__obstacle__detector_1_1CoordinateTransformer.html  (+212 more)
docs/latex/: Automonous_01perception_2uv__detector__node_2src_2README_8md.tex  QUICK__REFERENCE_8md.tex  README_8md.tex  README__Docker_8md.tex  REAL__WORLD__DEPLOYMENT_8md.tex  UV__detector_8cpp.tex  UV__detector_8cpp__incl.md5  UV__detector_8h.tex  UV__detector_8h__dep__incl.md5  UV__detector_8h__incl.md5  UV__detector_8h_source.tex  ____init_____8py.tex  annotated.tex  (+127 more)
sample_detection/: detect_pose_zed.py
zed_obstacle_detector/: CMakeLists.txt  REAL_WORLD_DEPLOYMENT.md  package.xml  zed_obstacle_detector_node.cpp
zed_obstacle_detector/config/: params.yaml
zed_obstacle_detector/docker/: .dockerignore  Dockerfile  README_Docker.md  docker-compose.yml
zed_obstacle_detector/include/zed_obstacle_detector/: point_cloud_processor.h
zed_obstacle_detector/launch/: zed_camera_generic.launch
zed_obstacle_detector/scripts/: build_and_run.sh  test_parameters.sh
zed_obstacle_detector/src/: coordinate_transformer.cpp  obstacle_tracker.cpp
(+142 files in other folders)
