<?xml version="1.0"?>
<package format="2">
  <name>zed_obstacle_detector</name>
  <version>0.0.1</version>
  <description>Obstacle detection using ZED point cloud and PCL</description>

  <maintainer email="abdulrahman.hany003@gmail.com">DopeBiscuit</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>roar_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_eigen</depend>
  <export></export>
</package>
